manifests/wallabag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wallabag
