manifests/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  namespace: wallabag
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - wallabag.bgottlob.com
    secretName: wallabag-tls
  rules:
  - host: wallabag.bgottlob.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wallabag
            port:
              number: 80
